--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,6 @@ test {
 }
 
 dependencies {
-    String testFxVersion = '4.0.16-alpha'
     String jUnitVersion = '5.4.0'
     String javaFxVersion = '11'
 
@@ -58,15 +57,13 @@ dependencies {
     implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
     implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
     implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
+    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.0'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.7.4'
 
-    testImplementation group: 'org.testfx', name: 'testfx-core', version: testFxVersion
-
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
 
-    testRuntimeOnly group: 'org.testfx', name: 'openjfx-monocle', version: 'jdk-11+26'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
 }
 
@@ -101,22 +98,7 @@ tasks.coveralls {
     onlyIf { System.env.'CI' }
 }
 
-task(guiTests)
-task(nonGuiTests)
-
-// Run `test` task if `guiTests` or `nonGuiTests` is specified
-guiTests.dependsOn test
-nonGuiTests.dependsOn test
-
-task(allTests)
-
-// `allTests` implies both `guiTests` and `nonGuiTests`
-allTests.dependsOn guiTests
-allTests.dependsOn nonGuiTests
-
 test {
-    systemProperty 'testfx.setup.timeout', '60000'
-
     testLogging {
         events TestLogEvent.FAILED, TestLogEvent.SKIPPED
 
@@ -131,47 +113,7 @@ test {
     jacoco {
         destinationFile = new File("${buildDir}/jacoco/test.exec")
     }
-
-    doFirst {
-        boolean runGuiTests = gradle.taskGraph.hasTask(guiTests)
-        boolean runNonGuiTests = gradle.taskGraph.hasTask(nonGuiTests)
-
-        if (!runGuiTests && !runNonGuiTests) {
-            runGuiTests = true
-            runNonGuiTests = true
-        }
-
-        if (runNonGuiTests) {
-            test.include 'seedu/address/**'
-        }
-
-        if (runGuiTests) {
-            test.include 'systemtests/**'
-            test.include 'seedu/address/ui/**'
-        }
-
-        if (!runGuiTests) {
-            test.exclude 'seedu/address/ui/**'
-        }
-    }
 }
-
-task headless {
-    doLast {
-        println 'Setting headless mode properties.'
-        test {
-            systemProperties = [
-                    'testfx.robot': 'glass',
-                    'testfx.headless': 'true',
-                    'prism.order': 'sw',
-                    'prism.text': 't2k',
-            ]
-        }
-    }
-}
-
-// Makes sure that headless properties are set before running tests
-test.mustRunAfter headless
 
 asciidoctor {
     backends 'html5'
@@ -210,4 +152,4 @@ task copyStylesheets(type: Copy) {
 }
 asciidoctor.dependsOn copyStylesheets
 
-defaultTasks 'clean', 'headless', 'allTests', 'coverage', 'asciidoctor'
+defaultTasks 'clean', 'test', 'coverage', 'asciidoctor'
