change display names

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -17,35 +17,35 @@
   "authors": [
     {
       "githubId": "EugeneTeu",
-      "displayName": "Eugene",
+      "displayName": "EUGEN ... U WEI",
       "authorNames": [
         "Eugene"
       ]
     },
     {
       "githubId": "zhixianggg",
-      "displayName": "Zhi Xiang",
+      "displayName": "OON Z ... XIANG",
       "authorNames": [
         "Zhi Xiang"
       ]
     },
     {
       "githubId": "qiujiaaa",
-      "displayName": "Qiu Jia",
+      "displayName": "OOI Q ... U JIA",
       "authorNames": [
         "Qiu Jia"
       ]
     },
     {
       "githubId": "uberSaiyan",
-      "displayName": "Wei Liang",
+      "displayName": "YAN W ... LIANG",
       "authorNames": [
         "Wei Liang"
       ]
     },
     {
       "githubId": "yeodonghan",
-      "displayName": "Dong Han",
+      "displayName": "YEO D ... G HAN",
       "authorNames": [
         "Dong Han"
       ]
