--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -19,35 +19,35 @@
       "githubId": "EugeneTeu",
       "displayName": "EUGEN ... U WEI",
       "authorNames": [
-        "Eugene"
+        "eugene teu"
       ]
     },
     {
       "githubId": "zhixianggg",
       "displayName": "OON Z ... XIANG",
       "authorNames": [
-        "Zhi Xiang"
+        "zhixianggg"
       ]
     },
     {
       "githubId": "qiujiaaa",
       "displayName": "OOI Q ... U JIA",
       "authorNames": [
-        "Qiu Jia"
+        "qiujiaaa"
       ]
     },
     {
       "githubId": "uberSaiyan",
       "displayName": "YAN W ... LIANG",
       "authorNames": [
-        "Wei Liang"
+        "uberSaiyan"
       ]
     },
     {
       "githubId": "yeodonghan",
       "displayName": "YEO D ... G HAN",
       "authorNames": [
-        "Dong Han"
+        "yeodonghan"
       ]
     }
   ]
