Change appeal fields in json

--- a/docs/appeal.json
+++ b/docs/appeal.json
@@ -1,128 +1,128 @@
 [
     {
-      "Appeal_id": "C000000",
-      "Appeal_type": "Increase workload",
-      "Academic_year": "AY19/20",
-      "Student_ID": "A0180000",
-      "Student_workload": 24,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "I want to increase my workload so I can graduate on time",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C000000",
+      "aappealType": "Increase workload",
+      "academicYear": "AY19/20",
+      "studentId": "A0180000",
+      "studentWorkload": 24,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "I want to increase my workload so I can graduate on time",
+      "resolved": false,
+      "appealemark": ""
     },
     {
-      "Appeal_id": "C00001",
-      "Appeal_type": "Drop module",
-      "Academic_year": "AY",
-      "Student_ID": "A0180001",
-      "Student_workload": 28,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "I don't think I can cope with the workload",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C00001",
+      "appealType": "Drop module",
+      "AcademicYear": "AY",
+      "studentId": "A0180001",
+      "studentWorkload": 28,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "I don't think I can cope with the workload",
+      "resolved": false,
+      "remark": ""
     },
     {
-      "Appeal_id": "C00002",
-      "Appeal_type": "Drop module",
-      "Academic_year": "AY",
-      "Student_ID": "A0180002",
-      "Student_workload": 28,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "I cannot cope with the workload",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C00002",
+      "appealType": "Drop module",
+      "AcademicYear": "AY",
+      "studentId": "A0180002",
+      "studentWorkload": 28,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "I cannot cope with the workload",
+      "resolved": false,
+      "remark": ""
     },
     {
-      "Appeal_id": "C00003",
-      "Appeal_type": "Add module",
-      "Academic_year": "AY",
-      "Student_ID": "A0180003",
-      "Student_workload": 20,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "I want to take another module",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C00003",
+      "appealType": "Add module",
+      "AcademicYear": "AY",
+      "studentId": "A0180003",
+      "studentWorkload": 20,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "I want to take another module",
+      "resolved": false,
+      "remark": ""
     },
     {
-      "Appeal_id": "C00004",
-      "Appeal_type": "Increase workload",
-      "Academic_year": "AY",
-      "Student_ID": "A0180004",
-      "Student_workload": 20,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "I want to clear my UEs",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C00004",
+      "appealType": "Increase workload",
+      "AcademicYear": "AY",
+      "studentId": "A0180004",
+      "studentWorkload": 20,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "I want to clear my UEs",
+      "resolved": false,
+      "remark": ""
     },
     {
-      "Appeal_id": "C00005",
-      "Appeal_type": "Add module",
-      "Academic_year": "AY",
-      "Student_ID": "A0180005",
-      "Student_workload": 20,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "I want to graduate earlier",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C00005",
+      "appealType": "Add module",
+      "AcademicYear": "AY",
+      "studentId": "A0180005",
+      "studentWorkload": 20,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "I want to graduate earlier",
+      "resolved": false,
+      "remark": ""
     },
     {
-      "Appeal_id": "C00006",
-      "Appeal_type": "Add module",
-      "Academic_year": "AY",
-      "Student_ID": "A0180006",
-      "Student_workload": 20,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "I wish to take this module to clear my prerequisite",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C00006",
+      "appealType": "Add module",
+      "AcademicYear": "AY",
+      "studentId": "A0180006",
+      "studentWorkload": 20,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "I wish to take this module to clear my prerequisite",
+      "resolved": false,
+      "remark": ""
     },
     {
-      "Appeal_id": "C00007",
-      "Appeal_type": "Drop module",
-      "Academic_year": "AY",
-      "Student_ID": "A0180007",
-      "Student_workload": 30,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "Cannot cope",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C00007",
+      "appealType": "Drop module",
+      "AcademicYear": "AY",
+      "studentId": "A0180007",
+      "studentWorkload": 30,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "Cannot cope",
+      "resolved": false,
+      "remark": ""
     },
     {
-      "Appeal_id": "C00008",
-      "Appeal_type": "Drop module",
-      "Academic_year": "AY",
-      "Student_ID": "A0180008",
-      "Student_workload": 21,
-      "Previous_module": "",
-      "New_module": "",
-      "Module_to_add": "",
-      "Module_to_drop": "",
-      "Appeal_description": "I am taking too many modules",
-      "Resolved": false,
-      "Appeal_remark": ""
+      "appealId": "C00008",
+      "appealType": "Drop module",
+      "AcademicYear": "AY",
+      "studentId": "A0180008",
+      "studentWorkload": 21,
+      "previousModule": "",
+      "newModule": "",
+      "moduleToAdd": "",
+      "moduleToDrop": "",
+      "appealDescription": "I am taking too many modules",
+      "resolved": false,
+      "remark": ""
     }
   ]
