--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -4,35 +4,35 @@
       "githubId": "EugeneTeu",
       "displayName": "EUGEN ... U WEI",
       "authorNames": [
-         "EugeneTeu", "eugene teu"
+         "EugeneTeu", "eugene teu", "Eugene"
       ]
     },
     {
       "githubId": "zhixianggg",
       "displayName": "OON Z ... XIANG",
       "authorNames": [
-        "zhixianggg", "Zhi Xiang"
+        "zhixianggg", "Oon Zhi Xiang"
       ]
     },
     {
       "githubId": "qiujiaaa",
       "displayName": "OOI Q ... U JIA",
       "authorNames": [
-        "qiujiaaa", "Qiu Jia"
+        "qiujiaaa", "Qiu Jia", "Ooi Qiu Jia"
       ]
     },
     {
       "githubId": "uberSaiyan",
       "displayName": "YAN W ... LIANG",
       "authorNames": [
-        "uberSaiyan", "Wei Liang"
+        "uberSaiyan", "Wei Liang", "Yan Wei Liang"
       ]
     },
     {
       "githubId": "yeodonghan",
       "displayName": "YEO D ... G HAN",
       "authorNames": [
-        "yeodonghan", "Dong Han"
+        "yeodonghan", "Dong Han", "Yeo Dong Han"
       ]
     }
   ]
