--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
+
+    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.2'
 }
 
 shadowJar {
