--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
     - jdk: openjdk11
 
 script: >-
-    ./config/travis/run-checks.sh
+    ./gradlew clean test coverage coveralls asciidoctor
 
 deploy:
   skip_cleanup: true
