--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveName = 'addressbook.jar'
+    archiveName = 'flashcard.jar'
 
     destinationDir = file("${buildDir}/jar/")
 }
