--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,10 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
+
+    compile group: 'org.jfxtras', name: 'jfxtras-agenda', version: '9.0-r1-SNAPSHOT'
+    compile group: 'org.jfxtras', name: 'jfxtras-icalendaragenda', version: '9.0-r1-SNAPSHOT'
+    compile group: 'org.jfxtras', name: 'jfxtras-icalendarfx', version: '9.0-r1-SNAPSHOT'
 }
 
 shadowJar {
