--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveName = 'addressbook.jar'
+    archiveName = 'ims-1.2.1.jar'
 
     destinationDir = file("${buildDir}/jar/")
 }
@@ -134,8 +134,7 @@ asciidoctor {
         idseparator: '-',
         'site-root': "${sourceDir}",  // must be the same as sourceDir, do not modify
         'site-name': 'Incident Management System',
-        'site-githuburl': 'https://ay1920s1-cs2103-t11-1.github.io/main/',
-        'site-seedu': true,  // delete this line if your project is not a fork (not a SE-EDU project)
+        'site-githuburl': 'https://github.com/AY1920S1-CS2103-T11-1/main'
     ]
 
     options['template_dirs'].each {
