--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.7.4'
 
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.0'
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.0'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
 
