Update displayName for RepoSense

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -2,35 +2,35 @@
   "authors": [
     {
       "githubId": "joloong",
-      "displayName": "Joel",
+      "displayName": "LOONG ...JOEL",
       "authorNames": [
         "joloong"
       ]
     },
     {
       "githubId": "dingyuchen",
-      "displayName": "Ding",
+      "displayName": "DING... UCHEN",
       "authorNames": [
         "dingyuchen"
       ]
     },
     {
       "githubId": "yewon0303",
-      "displayName": "Ye Won",
+      "displayName": "PARK... E WON",
       "authorNames": [
         "yewon0303"
       ]
     },
     {
       "githubId": "wallacelim97",
-      "displayName": "Wallace",
+      "displayName": "WALLA ... E LIM",
       "authorNames": [
         "wallacelim97"
       ]
     },
     {
       "githubId": "Berttwm",
-      "displayName": "Bertrand",
+      "displayName": "TAN W ... TRAND",
       "authorNames": [
         "Berttwm"
       ]
