--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ src/test/data/sandbox/
 
 # MacOS custom attributes files created by Finder
 .DS_Store
+
+# VSCode Settings
+/.settings
+/bin/
+/.project
+/.classpath
