--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: java
 matrix:
   include:
     # macOS / OpenJDK 11 / Headless
+    - os: osx
+      osx_image: xcode9.4
       jdk: openjdk11
       env:
         - _JAVA_OPTIONS="-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw"
