--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ matrix:
 
 script: >-
     ./config/travis/run-checks.sh &&
-    ./gradlew clean checkstyleMain checkstyleTest test coverage coveralls #asciidoctor
+    ./gradlew clean checkstyleMain checkstyleTest test coverage asciidoctor #coveralls
 
-#deploy:
-#  skip_cleanup: true
-#  provider: script
-#  script: ./config/travis/deploy_github_pages.sh
-#  on:
-#    branch: master
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: ./config/travis/deploy_github_pages.sh
+  on:
+    branch: master
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
