--- a/docs/images/desktop.ini
+++ b/docs/images/desktop.ini
@@ -1,4 +1,2 @@
 [LocalizedFileNames]
-RankCommand.png=@RankCommand,0
-addPerson.png=@addPerson,0
-CS2103.png=@CS2103,0
+DeleteSequenceDiagramlatest.png=@DeleteSequenceDiagramlatest,0
