Refactor and add tests
* Refactor and add tests for Quantity

* Refactor DeleteCommand

* Add CommandUtil

* Refactor tests and relevant classes

* Update tests for shift commands

* Add tests for CommandUtil

* Add tests for ReplenishList and related classes

* Update index error message

* Update ShiftToMainCommand test

* Fix bugs in commands

--- a/build.gradle
+++ b/build.gradle
@@ -155,12 +155,12 @@ task copyStylesheets(type: Copy) {
 }
 asciidoctor.dependsOn copyStylesheets
 
-/*
-gradle.projectsEvaluated {
+
+/*gradle.projectsEvaluated {
     tasks.withType(JavaCompile) {
         options.compilerArgs << "-Xlint:unchecked"
     }
-}
-*/
+}*/
+
 
 defaultTasks 'clean', 'test', 'coverage', 'asciidoctor'
