--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ plugins {
 // Specifies the entry point of the application
 mainClassName = 'seedu.pluswork.Main'
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 archivesBaseName = 'ITEXT'      //NEWSTUFF
 version = '1'                   //NEWSTUFF
