--- a/build.gradle
+++ b/build.gradle
@@ -139,7 +139,7 @@ asciidoctor {
         idseparator: '-',
         'site-root': "${sourceDir}",  // must be the same as sourceDir, do not modify
         'site-name': 'TravEzy',
-        'site-githuburl': 'https://ay1920s1-cs2103t-t17-2.github.io/main/',
+        'site-githuburl': 'https://github.com/AY1920S1-CS2103T-T17-2/main',
         'site-seedu': true,  // delete this line if your project is not a fork (not a SE-EDU project)
     ]
 
