User guide, developer guide and project portfolio page (#134)

--- a/docs/images/desktop.ini
+++ b/docs/images/desktop.ini
@@ -1,2 +1,6 @@
 [LocalizedFileNames]
 DeleteSequenceDiagramlatest.png=@DeleteSequenceDiagramlatest,0
+RankCommand.png=@RankCommand,0
+addPerson.png=@addPerson,0
+CS2103.png=@CS2103,0
+overallRank_activity.png=@overallRank_activity,0
