--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ src/main/resources/docs/
 # Test sandbox files
 src/test/data/sandbox/
 
+# Ignore HTML files
+docs/*.html
+
 # MacOS custom attributes files created by Finder
 .DS_Store
 
