--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
 
 script: >-
     ./config/travis/run-checks.sh &&
-    ./gradlew clean checkstyleMain checkstyleTest test coverage asciidoctor #coveralls
+    ./gradlew clean checkstyleMain checkstyleTest test coverage asciidoctor coveralls
 
 
 deploy:
